fixed overflow

--- a/style.css
+++ b/style.css
@@ -17,11 +17,12 @@ body{
 }
 
 .left-side{
-    width: 500px;
+    width: 30%;
     background-image: url("./images/photo-1678968405583-fcdfa7003f8f.avif");
     background-position: center;
     color: white;
     position: relative;
+    overflow: hidden;
 }
 
 .logo{
